tests/snapshots/ast/parser_05_4_pratt_evaluation_2__common__assertion__test_precedence_complex_expression_integration_1.snap
---
source: tests/common/assertion.rs
expression: ast
---
program:
  stmts:
    - Let:
        name: a
        kind: MutableStatic
        value:
          Binary:
            left:
              Binary:
                left:
                  Binary:
                    left:
                      Binary:
                        left:
                          Binary:
                            left:
                              Unary:
                                op: Neg
                                expr:
                                  Call:
                                    callee:
                                      Member:
                                        target:
                                          Var: b
                                        field: c
                                    args: []
                            op: Power
                            right:
                              Var: d
                        op: Mul
                        right:
                          Var: e
                    op: Add
                    right:
                      Var: f
                op: Eq
                right:
                  Var: g
            op: And
            right:
              Var: h
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: a
      kind: MutableStatic
      value:
        Binary:
          left:
            Binary:
              left:
                Binary:
                  left:
                    Binary:
                      left:
                        Binary:
                          left:
                            Unary:
                              op: Neg
                              expr:
                                Call:
                                  callee:
                                    Member:
                                      target:
                                        Var: b
                                      field: c
                                  args: []
                          op: Power
                          right:
                            Var: d
                      op: Mul
                      right:
                        Var: e
                  op: Add
                  right:
                    Var: f
              op: Eq
              right:
                Var: g
          op: And
          right:
            Var: h
