tests/snapshots/ast/parser_05_4_pratt_evaluation_2__common__assertion__test_precedence_power_vs_multiplication_1.snap
---
source: tests/common/assertion.rs
expression: parse_to_ast(input)
---
Ok:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Var: a
                op: Power
                right:
                  Var: b
            op: Mul
            right:
              Var: c
  expr:
    Binary:
      left:
        Binary:
          left:
            Var: a
          op: Power
          right:
            Var: b
      op: Mul
      right:
        Var: c
  program:
    stmts: []
    modules: []
    globals: []
    entry: ~
  items: []
