tests/snapshots/ast/parser_05_4_pratt_evaluation_2__common__assertion__test_precedence_unary_vs_power_1.snap
---
source: tests/common/assertion.rs
expression: ast
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Unary:
                op: Neg
                expr:
                  Var: a
            op: Power
            right:
              Var: b
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Unary:
              op: Neg
              expr:
                Var: a
          op: Power
          right:
            Var: b
